# console-video-player

./: .gitignore  Cargo.toml  README.md
src/: frame.rs  frame_processing.rs  lib.rs  main.rs
